# Train_Conductor

./: .gitignore  LICENSE  README.md  chainlit.md  pyproject.toml
public/: custom.css  debug-panel.js
training_monitor/: __init__.py  __main__.py  analyzer.py  logger.py  memory_tools.py  monitor.py  notify.py  snapshot_tools.py  system_metrics.py  telegram_chat.py  types.py  utils.py  web_chat.py
training_monitor/_web_assets/public/: debug-panel.js
